crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_cascades_to_bare_node.txt
(a (#eq? @x "foo") b)
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:5
  |
1 | (a (#eq? @x "foo") b)
  |     ^^^^
  |
help: use `(node == "x")`

error: node kinds must be parenthesized
 --> query.ptk:1:20
  |
1 | (a (#eq? @x "foo") b)
  |                    ^
  |
help: wrap in parentheses
  |
1 - (a (#eq? @x "foo") b)
1 + (a (#eq? @x "foo") (b))
  |
